--- a/build.gradle
+++ b/build.gradle
@@ -29,14 +29,14 @@ dependencies {
 	implementation 'org.springdoc:springdoc-openapi-ui:1.6.6'
 }
 
-tasks.named('test') {
-	onlyIf {
-		project.hasProperty("runtests")
-	}
-	doLast {
-		useJUnitPlatform()
-	}
-}
-//test {
-//	useJUnitPlatform()
+//tasks.named('test') {
+//	onlyIf {
+//		project.hasProperty("runtests")
+//	}
+//	doLast {
+//		useJUnitPlatform()
+//	}
 //}
+test {
+	useJUnitPlatform()
+}
