--- a/build.gradle
+++ b/build.gradle
@@ -25,19 +25,20 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	runtimeOnly 'com.mysql:mysql-connector-j'
 	implementation 'org.springdoc:springdoc-openapi-ui:1.6.6'
 	testImplementation 'com.google.code.gson:gson:'
 }
 
-//tasks.named('test') {
-//	onlyIf {
-//		project.hasProperty("runtests")
-//	}
-//	doLast {
-//		useJUnitPlatform()
-//	}
-//}
-test {
-	useJUnitPlatform()
+tasks.named('test') {
+	onlyIf {
+		project.hasProperty("runtests")
+	}
+	doLast {
+		useJUnitPlatform()
+	}
 }
+//test {
+//	useJUnitPlatform()
+//}
